--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack-dev-server --mode development",
+		"start": "webpack-dev-server --mode development --hot --port 3000",
 		"build": "webpack --mode development",
 		"deploy:github": "node deploy-to-github.js"
 	},
@@ -59,9 +59,12 @@
 		]
 	},
 	"dependencies": {
+		"@popperjs/core": "^2.11.0",
+		"bootstrap": "^5.1.3",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
+		"react-bootstrap": "^2.0.3",
 		"react-dom": "^17.0.2",
 		"react-polyfills": "0.0.1",
 		"react-router": "^6.0.2"
